fix gap between alert and the results

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ input[type="submit"]:hover {
 
 #result {
 	margin-top: 1rem;
+	margin-bottom: 1rem;
 	font-weight: bold;
 }
 
